# cpp-async-2026-03-25

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json.disabled
.devcontainer/: Dockerfile  devcontainer.json
_template-projects/project-tests/: tests.cpp
_template-projects/project-with-main/: tests.cpp
async-lab/: CMakeLists.txt  concurrent_queue.hpp  concurrent_queue_tests.cpp  file_descriptor.hpp  io_awaitables.hpp  io_awaitables_tests.cpp  reactor.hpp  reactor_epoll_tests.cpp  sync_wait.hpp  task.hpp  task_tests.cpp  thread_pool.hpp  thread_pool_tests.cpp
cmake/: Sanitizers.cmake
coroutines/: CMakeLists.txt  basic_coroutine_tests.cpp  concepts.hpp  concurrent_queue.hpp  coroutines_tests.cpp  generator_tests.cpp  tasks_test.cpp
coroutines-capy/: CMakeLists.txt  coroutines_capy_tests.cpp  task_logger.hpp
coroutines-corosio/: CMakeLists.txt  echo_server_tests.cpp  hash_server_test.cpp
multithreading/: CMakeLists.txt  multithreading_tests.cpp
senders-receivers/: CMakeLists.txt  mandelbrot.cpp  monte_carlo_pi.cpp  senders_receivers_tests.cpp
